--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       Name:         Evan Omerinovic Maric
       Student #:   101205607
       Email:        evan.omerinovic@georgebrown.ca
-      Submitted:    8/2/2019
-      Notes:        Some obviuos things I couldn't figure out.
+      Submitted:    8/19/2019
+      Notes:  
   -->
   <body>
     <header>
